--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
         <span> </span>
       </div>
       <ul>
-        <li><a href="#">Contato</a></li>
+        <li>
+          <a
+            href="https://api.whatsapp.com/send?phone=5551995383998&text=Ol%C3%A1%20Victor!%20Vim%20atrav%C3%A9s%20da%20sua%20p%C3%A1gina%20.%0A(Hello%20Victor!%20I%20came%20through%20your%20page.)"
+            >Contato</a
+          >
+        </li>
         <li><a href="#">Linkedin</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="https://www.instagram.com/alanovictors/">Instagram</a></li>
         <li>
           <a href="https://github.com/alanovictor" target="_blank"
             >Ver meu portifólio</a
