--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             >Contato</a
           >
         </li>
-        <li><a href="#">Linkedin</a></li>
+        <li><a href="https://linkedin.com/in/victor-alano">Linkedin</a></li>
         <li><a href="https://www.instagram.com/alanovictors/">Instagram</a></li>
         <li>
           <a href="https://github.com/alanovictor" target="_blank"
